contrast issues fixed, hover effects added

--- a/css/custom.css
+++ b/css/custom.css
@@ -37,7 +37,7 @@ body h1 {
   width: 300px;
   height: 300px;
   overflow: hidden;
-  background-image:linear-gradient(rgb(0, 0, 0), rgb(15, 15, 15), rgba(255, 0, 200, 0.24));
+  background-image:linear-gradient(rgb(0, 0, 0), rgb(15, 15, 15), rgba(0, 225, 255, 0.24));
 }
 
 .profile-circle::before {
@@ -55,9 +55,7 @@ body h1 {
 }
 
 #profile-right {
-  margin-top: 4vh;
-  margin-left: 3vw;
-  margin-right: 2vw;
+  margin-top: 1vh;
   background-color:rgb(0, 0, 0);
   color: white;
   text-align: center;
@@ -69,6 +67,11 @@ body h1 {
   background-color:rgb(0, 0, 0);
   color: white;
   text-align: center;
+}
+
+#profile-text a {
+  text-decoration: underline;
+  text-decoration-color: rgba(0, 240, 240, 0.288);
 }
 
 .socials-block {
@@ -87,7 +90,7 @@ body h1 {
 }
 
 .about-text p {
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 h3 {
@@ -162,7 +165,7 @@ h3 {
     width: 300px;
     height: 300px;
     overflow: hidden;
-    background-image:linear-gradient(rgb(0, 0, 0), rgb(15, 15, 15), rgba(255, 0, 200, 0.24));
+    background-image:linear-gradient(rgb(0, 0, 0), rgb(15, 15, 15), rgba(0, 162, 255, 0.24));
   }
   
   .profile-circle::before {
@@ -200,6 +203,10 @@ h3 {
     display: inline-block; margin: 0 6%;
   }  
 
+}
+
+.downloadCV {
+  color: rgb(255, 255, 255);
 }
 
 /* Larger than Desktop HD */
